--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
+    "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
